--- a/biometric/2022-04-25.md
+++ b/biometric/2022-04-25.md
@@ -21,3 +21,43 @@ CFP, AgeDB. Furthermore, comparative experiments with existing state-of-the-art
 HFR methods show that our method achieves a comparable HFR performance on the
 Oulu-CASIA NIR&VIS dataset with less degradation of VIS performance.
 
+### Title: Remote laser-speckle sensing of heart sounds for health assessment and biometric identification
+* Paper ID: 2204.11978v1
+* Paper URL: [http://arxiv.org/abs/2204.11978v1](http://arxiv.org/abs/2204.11978v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: Assessment of heart sounds is the cornerstone of cardiac examination, but it
+requires a stethoscope, skills and experience, and a direct contact with the
+patient. We developed a contactless, machine-learning assisted method for
+heart-sound identification and quantification based on the remote measurement
+of the reflected laser speckle from the neck skin surface in healthy
+individuals. We compare the performance of this method to standard digital
+stethoscope recordings on an example task of heart-beat sound biometric
+identification. We show that our method outperforms the stethoscope even
+allowing identification on the test data taken on different days. This method
+might allow development of devices for remote monitoring of cardiovascular
+health in different settings.
+
+### Title: Joint Feature Distribution Alignment Learning for NIR-VIS and VIS-VIS Face Recognition
+* Paper ID: 2204.11434v1
+* Paper URL: [http://arxiv.org/abs/2204.11434v1](http://arxiv.org/abs/2204.11434v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: Face recognition for visible light (VIS) images achieve high accuracy thanks
+to the recent development of deep learning. However, heterogeneous face
+recognition (HFR), which is a face matching in different domains, is still a
+difficult task due to the domain discrepancy and lack of large HFR dataset.
+Several methods have attempted to reduce the domain discrepancy by means of
+fine-tuning, which causes significant degradation of the performance in the VIS
+domain because it loses the highly discriminative VIS representation. To
+overcome this problem, we propose joint feature distribution alignment learning
+(JFDAL) which is a joint learning approach utilizing knowledge distillation. It
+enables us to achieve high HFR performance with retaining the original
+performance for the VIS domain. Extensive experiments demonstrate that our
+proposed method delivers statistically significantly better performances
+compared with the conventional fine-tuning approach on a public HFR dataset
+Oulu-CASIA NIR&VIS and popular verification datasets in VIS domain such as FLW,
+CFP, AgeDB. Furthermore, comparative experiments with existing state-of-the-art
+HFR methods show that our method achieves a comparable HFR performance on the
+Oulu-CASIA NIR&VIS dataset with less degradation of VIS performance.
+
