--- a/extraction/2022-04-24.md
+++ b/extraction/2022-04-24.md
@@ -126,3 +126,159 @@ increasing accuracy from binary systems, the whole analysis could be used as an
 additional tool in order to test General Relativity and examine whether
 torsional gravitational modifications are possible.
 
+### Title: Deep Reinforcement Learning Using a Low-Dimensional Observation Filter for Visual Complex Video Game Playing
+* Paper ID: 2204.11370v1
+* Paper URL: [http://arxiv.org/abs/2204.11370v1](http://arxiv.org/abs/2204.11370v1)
+* Updated Date: 2022-04-24
+* Code URL: null
+* Summary: Deep Reinforcement Learning (DRL) has produced great achievements since it
+was proposed, including the possibility of processing raw vision input data.
+However, training an agent to perform tasks based on image feedback remains a
+challenge. It requires the processing of large amounts of data from
+high-dimensional observation spaces, frame by frame, and the agent's actions
+are computed according to deep neural network policies, end-to-end. Image
+pre-processing is an effective way of reducing these high dimensional spaces,
+eliminating unnecessary information present in the scene, supporting the
+extraction of features and their representations in the agent's neural network.
+Modern video-games are examples of this type of challenge for DRL algorithms
+because of their visual complexity. In this paper, we propose a low-dimensional
+observation filter that allows a deep Q-network agent to successfully play in a
+visually complex and modern video-game, called Neon Drive.
+
+### Title: Casimir Self-Entropy of Nanoparticles with Classical Polarizabilities: Electromagnetic Field Fluctuations
+* Paper ID: 2204.11336v1
+* Paper URL: [http://arxiv.org/abs/2204.11336v1](http://arxiv.org/abs/2204.11336v1)
+* Updated Date: 2022-04-24
+* Code URL: null
+* Summary: Not only are Casimir interaction entropies not guaranteed to be positive, but
+also, more strikingly, Casimir self-entropies of bodies can be negative. Here,
+we attempt to interpret the physical origin and meaning of these negative
+self-entropies by investigating the Casimir self-entropy of a neutral spherical
+nanoparticle. After extracting the polarizabilities of such a particle by
+examining the asymptotic behavior of the scattering Green's function, we
+compute the corresponding free energy and entropy. Two models for the
+nanoparticle, namely a spherical plasma $\delta$-function shell and a
+homogeneous dielectric/diamagnetic ball, are considered at low temperature,
+because that is all that can be revealed from a nanoparticle perspective. The
+second model includes a contribution to the entropy from the bulk free energy,
+referring to the situation where the medium inside or outside the ball fills
+all space, which must be subtracted on physical grounds in order to maintain
+consistency with van der Waals interactions, corresponding to the self-entropy
+of each bulk. (The van der Waals calculation is described in Appendix A.) The
+entropies so calculated agree with known results in the low-temperature limit,
+appropriate for a small particle, and are negative. But we suggest that the
+negative self-entropy is simply an interaction entropy, the difference between
+the total entropy and the blackbody entropy of the two bulks, outside or inside
+of the nanosphere. The vacuum entropy is always positive and overwhelms the
+interaction entropy. Thus the interaction entropy can be negative, without
+contradicting the principles of statistical thermodynamics. Because the entropy
+of blackbody radiation by itself plays an important role, it is also discussed,
+including dispersive effects, in detail.
+
+### Title: Constructive Combinatorics of Dickson's Lemma
+* Paper ID: 2204.11298v1
+* Paper URL: [http://arxiv.org/abs/2204.11298v1](http://arxiv.org/abs/2204.11298v1)
+* Updated Date: 2022-04-24
+* Code URL: null
+* Summary: We study constructively the relations between the finite cases of Dickson's
+lemma. Although there are many constructive proofs of them, the novel aspect of
+our proofs is the extraction of a corresponding bound. We provide some new
+one-step unprovability results i.e., results of the form "a finite case of
+Dickson's lemma does not prove in one step a stronger case of it". Moreover, we
+study the infinite cases of Dickson's lemma from the point of view of
+constructive reverse mathematics. We work within Bishop's informal system of
+constructive mathematics BISH.
+
+### Title: Heterogeneous Information Network based Default Analysis on Banking Micro and Small Enterprise Users
+* Paper ID: 2204.11849v1
+* Paper URL: [http://arxiv.org/abs/2204.11849v1](http://arxiv.org/abs/2204.11849v1)
+* Updated Date: 2022-04-24
+* Code URL: null
+* Summary: Risk assessment is a substantial problem for financial institutions that has
+been extensively studied both for its methodological richness and its various
+practical applications. With the expansion of inclusive finance, recent
+attentions are paid to micro and small-sized enterprises (MSEs). Compared with
+large companies, MSEs present a higher exposure rate to default owing to their
+insecure financial stability. Conventional efforts learn classifiers from
+historical data with elaborate feature engineering. However, the main obstacle
+for MSEs involves severe deficiency in credit-related information, which may
+degrade the performance of prediction. Besides, financial activities have
+diverse explicit and implicit relations, which have not been fully exploited
+for risk judgement in commercial banks. In particular, the observations on real
+data show that various relationships between company users have additional
+power in financial risk analysis. In this paper, we consider a graph of banking
+data, and propose a novel HIDAM model for the purpose. Specifically, we attempt
+to incorporate heterogeneous information network with rich attributes on
+multi-typed nodes and links for modeling the scenario of business banking
+service. To enhance feature representation of MSEs, we extract interactive
+information through meta-paths and fully exploit path information. Furthermore,
+we devise a hierarchical attention mechanism respectively to learn the
+importance of contents inside each meta-path and the importance of different
+metapahs. Experimental results verify that HIDAM outperforms state-of-the-art
+competitors on real-world banking data.
+
+### Title: 2D LiDAR and Camera Fusion Using Motion Cues for Indoor Layout Estimation
+* Paper ID: 2204.11202v1
+* Paper URL: [http://arxiv.org/abs/2204.11202v1](http://arxiv.org/abs/2204.11202v1)
+* Updated Date: 2022-04-24
+* Code URL: [https://github.com/leejieyu13/lidarcameradataset](https://github.com/leejieyu13/lidarcameradataset)
+* Summary: This paper presents a novel indoor layout estimation system based on the
+fusion of 2D LiDAR and intensity camera data. A ground robot explores an indoor
+space with a single floor and vertical walls, and collects a sequence of
+intensity images and 2D LiDAR datasets. The LiDAR provides accurate depth
+information, while the camera captures high-resolution data for semantic
+interpretation. The alignment of sensor outputs and image segmentation are
+computed jointly by aligning LiDAR points, as samples of the room contour, to
+ground-wall boundaries in the images. The alignment problem is decoupled into a
+top-down view projection and a 2D similarity transformation estimation, which
+can be solved according to the vertical vanishing point and motion of two
+sensors. The recursive random sample consensus algorithm is implemented to
+generate, evaluate and optimize multiple hypotheses with the sequential
+measurements. The system allows jointly analyzing the geometric interpretation
+from different sensors without offline calibration. The ambiguity in images for
+ground-wall boundary extraction is removed with the assistance of LiDAR
+observations, which improves the accuracy of semantic segmentation. The
+localization and mapping is refined using the fused data, which enables the
+system to work reliably in scenes with low texture or low geometric features.
+
+### Title: Few-Shot Speaker Identification Using Depthwise Separable Convolutional Network with Channel Attention
+* Paper ID: 2204.11180v1
+* Paper URL: [http://arxiv.org/abs/2204.11180v1](http://arxiv.org/abs/2204.11180v1)
+* Updated Date: 2022-04-24
+* Code URL: null
+* Summary: Although few-shot learning has attracted much attention from the fields of
+image and audio classification, few efforts have been made on few-shot speaker
+identification. In the task of few-shot learning, overfitting is a tough
+problem mainly due to the mismatch between training and testing conditions. In
+this paper, we propose a few-shot speaker identification method which can
+alleviate the overfitting problem. In the proposed method, the model of a
+depthwise separable convolutional network with channel attention is trained
+with a prototypical loss function. Experimental datasets are extracted from
+three public speech corpora: Aishell-2, VoxCeleb1 and TORGO. Experimental
+results show that the proposed method exceeds state-of-the-art methods for
+few-shot speaker identification in terms of accuracy and F-score.
+
+### Title: Quasinormal modes of black holes in f(T) gravity
+* Paper ID: 2204.11169v1
+* Paper URL: [http://arxiv.org/abs/2204.11169v1](http://arxiv.org/abs/2204.11169v1)
+* Updated Date: 2022-04-24
+* Code URL: null
+* Summary: We calculate the quasinormal modes (QNM) frequencies of a test massless
+scalar field around static black holes in f(T) gravity. Focusing on quadratic
+f(T) modifications, which is a good approximation for every realistic f(T)
+theory, we first extract the spherically symmetric solutions using the
+perturbative method, imposing two ansatze for the metric functions, which
+suitably quantify the deviation from the Schwarzschild solution. Moreover, we
+extract the effective potential and then we calculate the QNM frequency of the
+obtained solutions. Firstly, we solve the Schrodinger-like equation numerically
+using the discretization method, and we extract the frequency and the time
+evolution of the dominant mode applying the function fit method. Secondly, we
+perform a semi-analytical calculation by applying the third-order WKB
+approximation method. We show that the results for f(T) gravity are different
+comparing to General Relativity, and in particular we obtain a different slope
+and period of the field decay behavior for different values of the model
+parameter. Hence, under the light of gravitational-wave observations of
+increasing accuracy from binary systems, the whole analysis could be used as an
+additional tool in order to test General Relativity and examine whether
+torsional gravitational modifications are possible.
+
