--- a/membership_infer/2022-04-25.md
+++ b/membership_infer/2022-04-25.md
@@ -442,3 +442,545 @@ propagating over 1 year of the rotational axis less than 3{\deg} and rotational
 speed being 0.11{\deg}/s, were believed to be able to satisfy the accuracy
 requirements of the rotation state well at the moment of docking.
 
+### Title: AI Personification: Estimating the Personality of Language Models
+* Paper ID: 2204.12000v1
+* Paper URL: [http://arxiv.org/abs/2204.12000v1](http://arxiv.org/abs/2204.12000v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: Technology for open-ended language generation, a key application of
+artificial intelligence, has advanced to a great extent in recent years.
+Large-scale language models, which are trained on large corpora of text, are
+being used in a wide range of applications everywhere, from virtual assistants
+to conversational bots. While these language models output fluent text,
+existing research shows that these models can and do capture human biases. Many
+of these biases, especially those that could potentially cause harm, are being
+well investigated. On the other hand, studies that infer and change personality
+traits inherited by these models have been scarce or non-existent. In this
+work, we explore the personality traits of several large-scale language models
+designed for open-ended text generation and the datasets used for training
+them. Our work builds on the popular Big Five factors and develops robust
+methods that quantify the personality traits of these models and their
+underlying datasets. In particular, we trigger the models with a questionnaire
+designed for personality assessment and subsequently classify the text
+responses into quantifiable traits using a Zero-shot classifier. Our
+classification sheds light on an important anthropomorphic element found in
+such AI models and can help stakeholders decide how they should be applied and
+how society could perceive them. We augment our analysis by studying approaches
+that can alter these personalities.
+
+### Title: Inferences on relations between distant supermassive black holes and their hosts complemented by the galaxy fundamental plane
+* Paper ID: 2204.11948v1
+* Paper URL: [http://arxiv.org/abs/2204.11948v1](http://arxiv.org/abs/2204.11948v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: The realization of fundamental relations between supermassive black holes and
+their host galaxies would have profound implications in astrophysics. To add
+further context to studies of their co-evolution, an investigation is carried
+out to gain insight as to whether quasars and their hosts at earlier epochs
+follow the local relation between black hole (BH) mass and stellar velocity
+dispersion. We use 584 SDSS quasars at 0.2 < z < 0.8 with black hole
+measurements, and properties of their hosts from the Hyper Suprime-Cam Subaru
+Strategic Program. An inference of the stellar velocity dispersion is achieved
+for each based on the stellar mass and size of the host galaxy by using the
+galaxy mass fundamental plane for inactive galaxies at similar redshifts. In
+agreement with past studies, quasars occupy an elevated position from the local
+M_BH-sigma relation, considered as a flattening, while maintaining ratios of
+M_BH/M* consistent with local values. Based on a forward-modeling of the
+sample, we demonstrate that an evolving intrinsic M_BH-sigma relation can match
+the observations. However, we hypothesize that these changes may be a
+reflection of a non-evolving intrinsic relationship between M_BH and M*.
+Reassuringly, there are signs of migration onto the local M_BH-sigma for
+galaxies that are either massive, quiescent or compact. Thus, the majority of
+the bulges of quasar hosts at high redshift are in a development stage and
+likely to align with their black holes onto the mass scaling relation at later
+times.
+
+### Title: Discrete-Continuous Smoothing and Mapping
+* Paper ID: 2204.11936v1
+* Paper URL: [http://arxiv.org/abs/2204.11936v1](http://arxiv.org/abs/2204.11936v1)
+* Updated Date: 2022-04-25
+* Code URL: [https://github.com/marineroboticsgroup/dcsam](https://github.com/marineroboticsgroup/dcsam)
+* Summary: We describe a general approach to smoothing and mapping with a class of
+discrete-continuous factor graphs commonly encountered in robotics
+applications. While there are openly available tools providing flexible and
+easy-to-use interfaces for specifying and solving optimization problems
+formulated in terms of either discrete or continuous graphical models, at
+present, no similarly general tools exist enabling the same functionality for
+hybrid discrete-continuous problems. We aim to address this problem. In
+particular, we provide a library, DC-SAM, extending existing tools for
+optimization problems defined in terms of factor graphs to the setting of
+discrete-continuous models. A key contribution of our work is a novel solver
+for efficiently recovering approximate solutions to discrete-continuous
+optimization problems. The key insight to our approach is that while joint
+inference over continuous and discrete state spaces is often hard, many
+commonly encountered discrete-continuous problems can naturally be split into a
+"discrete part" and a "continuous part" that can individually be solved easily.
+Leveraging this structure, we optimize discrete and continuous variables in an
+alternating fashion. In consequence, our proposed work enables straightforward
+representation of and approximate inference in discrete-continuous graphical
+models. We also provide a method to recover the uncertainty in estimates of
+both discrete and continuous variables. We demonstrate the versatility of our
+approach through its application to three distinct robot perception
+applications: point-cloud registration, robust pose graph optimization, and
+object-based mapping and localization.
+
+### Title: On-demand compute reduction with stochastic wav2vec 2.0
+* Paper ID: 2204.11934v1
+* Paper URL: [http://arxiv.org/abs/2204.11934v1](http://arxiv.org/abs/2204.11934v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: Squeeze and Efficient Wav2vec (SEW) is a recently proposed architecture that
+squeezes the input to the transformer encoder for compute efficient
+pre-training and inference with wav2vec 2.0 (W2V2) models. In this work, we
+propose stochastic compression for on-demand compute reduction for W2V2 models.
+As opposed to using a fixed squeeze factor, we sample it uniformly during
+training. We further introduce query and key-value pooling mechanisms that can
+be applied to each transformer layer for further compression. Our results for
+models pre-trained on 960h Librispeech dataset and fine-tuned on 10h of
+transcribed data show that using the same stochastic model, we get a smooth
+trade-off between word error rate (WER) and inference time with only marginal
+WER degradation compared to the W2V2 and SEW models trained for a specific
+setting. We further show that we can fine-tune the same stochastically
+pre-trained model to a specific configuration to recover the WER difference
+resulting in significant computational savings on pre-training models from
+scratch.
+
+### Title: Towards a Geometry and Analysis for Bayesian Mechanics
+* Paper ID: 2204.11900v1
+* Paper URL: [http://arxiv.org/abs/2204.11900v1](http://arxiv.org/abs/2204.11900v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: In this paper, a simple case of Bayesian mechanics under the free energy
+principle is formulated in axiomatic terms. We argue that any dynamical system
+with constraints on its dynamics necessarily looks as though it is performing
+inference against these constraints, and that in a non-isolated system, such
+constraints imply external environmental variables embedding the system. Using
+aspects of classical dynamical systems theory in statistical mechanics, we show
+that this inference is equivalent to a gradient ascent on the Shannon entropy
+functional, recovering an approximate Bayesian inference under a locally
+ergodic probability measure on the state space. We also use some geometric
+notions from dynamical systems theory$\unicode{x2014}$namely, that the
+constraints constitute a gauge degree of freedom$\unicode{x2014}$to elaborate
+on how the desire to stay self-organised can be read as a gauge force acting on
+the system. In doing so, a number of results of independent interest are given.
+Overall, we provide a related, but alternative, formalism to those driven
+purely by descriptions of random dynamical systems, and take a further step
+towards a comprehensive statement of the physics of self-organisation in formal
+mathematical language.
+
+### Title: Ab-initio QCD calculations impact the inference of the neutron-star-matter equation of state
+* Paper ID: 2204.11877v1
+* Paper URL: [http://arxiv.org/abs/2204.11877v1](http://arxiv.org/abs/2204.11877v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: We demonstrate that ab-initio calculations in QCD at high densities offer
+significant and nontrivial information about the equation of state of matter in
+the cores of neutron stars, going beyond that which is obtainable from current
+astrophysical observations. We do so by extrapolating the equation of state to
+neutron-star densities using a Gaussian process and conditioning it
+sequentially with astrophysical observations and QCD input. Using our recent
+work, imposing the latter does not require an extrapolation to asymptotically
+high density. We find the QCD input to be complementary to the astrophysical
+observations, offering strong additional constraints at the highest densities
+reached in the cores of neutron stars; with the QCD input, the equation of
+state is no longer prior dominated at any density. The QCD input reduces the
+pressure and speed of sound at high densities, and it predicts that binary
+collisions of equal-mass neutron stars will produce a black hole with greater
+than $95\%$ ($68\%$) credence for masses $M \geq 1.38 M_\odot$ ($M \geq 1.25
+M_\odot$). We provide a Python implementation of the QCD likelihood function so
+that it can be conveniently used within other inference setups.
+
+### Title: Persistent homology in cosmic shear II: A tomographic analysis of DES-Y1
+* Paper ID: 2204.11831v1
+* Paper URL: [http://arxiv.org/abs/2204.11831v1](http://arxiv.org/abs/2204.11831v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: We demonstrate how to use persistent homology for cosmological parameter
+inference in a tomographic cosmic shear survey. We obtain the first
+cosmological parameter constraints from persistent homology by applying our
+method to the first-year data of the Dark Energy Survey.
+  To obtain these constraints, we analyse the topological structure of the
+matter distribution by extracting persistence diagrams from signal-to-noise
+maps of aperture masses. This presents a natural extension to the widely used
+peak count statistics. Extracting the persistence diagrams from the
+cosmo-SLICS, a suite of $N$-body simulations with variable cosmological
+parameters, we interpolate the signal using Gaussian Processes and marginalise
+over the most relevant systematic effects, including intrinsic alignments and
+baryonic effects.
+  We find for the structure growth parameter $S_8=0.747^{+0.025}_{-0.031}$,
+which is in full agreement with other late-time probes. We also constrain the
+intrinsic alignment parameter to $A=1.54\pm 0.52$, ruling out the case of no
+intrinsic alignments at a $3\sigma$-level.
+
+### Title: Parallel Synthesis for Autoregressive Speech Generation
+* Paper ID: 2204.11806v1
+* Paper URL: [http://arxiv.org/abs/2204.11806v1](http://arxiv.org/abs/2204.11806v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: Autoregressive models have achieved outstanding performance in neural speech
+synthesis tasks. Though they can generate highly natural human speech, the
+iterative generation inevitably makes the synthesis time proportional to the
+utterance's length, leading to low efficiency. Many works were dedicated to
+generating the whole speech time sequence in parallel and then proposed
+GAN-based, flow-based, and score-based models. This paper proposed a new
+thought for the autoregressive generation. Instead of iteratively predicting
+samples in a time sequence, the proposed model performs frequency-wise
+autoregressive generation (FAR) and bit-wise autoregressive generation (BAR) to
+synthesize speech. In FAR, a speech utterance is first split into different
+frequency subbands. The proposed model generates a subband conditioned on the
+previously generated one. A full band speech can then be reconstructed by using
+these generated subbands and a synthesis filter bank. Similarly, in BAR, an
+8-bit quantized signal is generated iteratively from the first bit. By
+redesigning the autoregressive method to compute in domains other than the time
+domain, the number of iterations in the proposed model is no longer
+proportional to the utterance's length but the number of subbands/bits. The
+inference efficiency is hence significantly increased. Besides, a post-filter
+is employed to sample audio signals from output posteriors, and its training
+objective is designed based on the characteristics of the proposed
+autoregressive methods. The experimental results show that the proposed model
+is able to synthesize speech faster than real-time without GPU acceleration.
+Compared with the baseline autoregressive and non-autoregressive models, the
+proposed model achieves better MOS and shows its good generalization ability
+while synthesizing 44 kHz speech or utterances from unseen speakers.
+
+### Title: SyntaSpeech: Syntax-Aware Generative Adversarial Text-to-Speech
+* Paper ID: 2204.11792v1
+* Paper URL: [http://arxiv.org/abs/2204.11792v1](http://arxiv.org/abs/2204.11792v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: The recent progress in non-autoregressive text-to-speech (NAR-TTS) has made
+fast and high-quality speech synthesis possible. However, current NAR-TTS
+models usually use phoneme sequence as input and thus cannot understand the
+tree-structured syntactic information of the input sequence, which hurts the
+prosody modeling. To this end, we propose SyntaSpeech, a syntax-aware and
+light-weight NAR-TTS model, which integrates tree-structured syntactic
+information into the prosody modeling modules in PortaSpeech
+\cite{ren2021portaspeech}. Specifically, 1) We build a syntactic graph based on
+the dependency tree of the input sentence, then process the text encoding with
+a syntactic graph encoder to extract the syntactic information. 2) We
+incorporate the extracted syntactic encoding with PortaSpeech to improve the
+prosody prediction. 3) We introduce a multi-length discriminator to replace the
+flow-based post-net in PortaSpeech, which simplifies the training pipeline and
+improves the inference speed, while keeping the naturalness of the generated
+audio. Experiments on three datasets not only show that the tree-structured
+syntactic information grants SyntaSpeech the ability to synthesize better audio
+with expressive prosody, but also demonstrate the generalization ability of
+SyntaSpeech to adapt to multiple languages and multi-speaker text-to-speech.
+Ablation studies demonstrate the necessity of each component in SyntaSpeech.
+Source code and audio samples are available at https://syntaspeech.github.io
+
+### Title: Blind Equalization and Channel Estimation in Coherent Optical Communications Using Variational Autoencoders
+* Paper ID: 2204.11776v1
+* Paper URL: [http://arxiv.org/abs/2204.11776v1](http://arxiv.org/abs/2204.11776v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: We investigate the potential of adaptive blind equalizers based on
+variational inference for carrier recovery in optical communications. These
+equalizers are based on a low-complexity approximation of maximum likelihood
+channel estimation. We generalize the concept of variational autoencoder (VAE)
+equalizers to higher order modulation formats encompassing probabilistic
+constellation shaping (PCS), ubiquitous in optical communications, oversampling
+at the receiver, and dual-polarization transmission. Besides black-box
+equalizers based on convolutional neural networks, we propose a model-based
+equalizer based on a linear butterfly filter and train the filter coefficients
+using the variational inference paradigm. As a byproduct, the VAE also provides
+a reliable channel estimation. We analyze the VAE in terms of performance and
+flexibility over a classical additive white Gaussian noise (AWGN) channel with
+inter-symbol interference (ISI) and over a dispersive linear optical
+dual-polarization channel. We show that it can extend the application range of
+blind adaptive equalizers by outperforming the state-of-the-art
+constant-modulus algorithm (CMA) for PCS for both fixed but also time-varying
+channels. The evaluation is accompanied with a hyperparameter analysis.
+
+### Title: LightDefectNet: A Highly Compact Deep Anti-Aliased Attention Condenser Neural Network Architecture for Light Guide Plate Surface Defect Detection
+* Paper ID: 2204.11765v1
+* Paper URL: [http://arxiv.org/abs/2204.11765v1](http://arxiv.org/abs/2204.11765v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: Light guide plates are essential optical components widely used in a diverse
+range of applications ranging from medical lighting fixtures to back-lit TV
+displays. An essential step in the manufacturing of light guide plates is the
+quality inspection of defects such as scratches, bright/dark spots, and
+impurities. This is mainly done in industry through manual visual inspection
+for plate pattern irregularities, which is time-consuming and prone to human
+error and thus act as a significant barrier to high-throughput production.
+Advances in deep learning-driven computer vision has led to the exploration of
+automated visual quality inspection of light guide plates to improve inspection
+consistency, accuracy, and efficiency. However, given the cost constraints in
+visual inspection scenarios, the widespread adoption of deep learning-driven
+computer vision methods for inspecting light guide plates has been greatly
+limited due to high computational requirements. In this study, we explore the
+utilization of machine-driven design exploration with computational and
+"best-practices" constraints as well as L$_1$ paired classification discrepancy
+loss to create LightDefectNet, a highly compact deep anti-aliased attention
+condenser neural network architecture tailored specifically for light guide
+plate surface defect detection in resource-constrained scenarios. Experiments
+show that LightDetectNet achieves a detection accuracy of $\sim$98.2% on the
+LGPSDD benchmark while having just 770K parameters ($\sim$33$\times$ and
+$\sim$6.9$\times$ lower than ResNet-50 and EfficientNet-B0, respectively) and
+$\sim$93M FLOPs ($\sim$88$\times$ and $\sim$8.4$\times$ lower than ResNet-50
+and EfficientNet-B0, respectively) and $\sim$8.8$\times$ faster inference speed
+than EfficientNet-B0 on an embedded ARM processor.
+
+### Title: Compression-Complexity with Ordinal Patterns for Robust Causal Inference in Irregularly-Sampled Time Series
+* Paper ID: 2204.11731v1
+* Paper URL: [http://arxiv.org/abs/2204.11731v1](http://arxiv.org/abs/2204.11731v1)
+* Updated Date: 2022-04-25
+* Code URL: [https://github.com/aditikathpalia/permutationccc](https://github.com/aditikathpalia/permutationccc)
+* Summary: Distinguishing cause from effect is a scientific challenge resisting
+solutions from mathematics, statistics, information theory and computer
+science. Compression-Complexity Causality (CCC) is a recently proposed
+interventional measure of causality, inspired by Wiener-Granger's idea. It
+estimates causality based on change in dynamical compression-complexity (or
+compressibility) of the effect variable, given the cause variable. CCC works
+with minimal assumptions on given data and is robust to irregular-sampling,
+missing-data and finite-length effects. However, it only works for
+one-dimensional time series. We propose an ordinal pattern symbolization scheme
+to encode multidimensional patterns into one-dimensional symbolic sequences,
+and thus introduce the Permutation CCC (PCCC), which retains all advantages of
+the original CCC and can be applied to data from multidimensional systems with
+potentially hidden variables. PCCC is tested on numerical simulations and
+applied to paleoclimate data characterized by irregular and uncertain sampling
+and limited numbers of samples.
+
+### Title: Five key exoplanet questions answered via the analysis of 25 hot Jupiter atmospheres in eclipse
+* Paper ID: 2204.11729v1
+* Paper URL: [http://arxiv.org/abs/2204.11729v1](http://arxiv.org/abs/2204.11729v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: Population studies of exoplanets are key to unlocking their statistical
+properties. So far the inferred properties have been mostly limited to
+planetary, orbital and stellar parameters extracted from, e.g., Kepler, radial
+velocity, and GAIA data. More recently an increasing number of exoplanet
+atmospheres have been observed in detail from space and the ground. Generally,
+however, these atmospheric studies have focused on individual planets, with the
+exception of a couple of works which have detected the presence of water vapor
+and clouds in populations of gaseous planets via transmission spectroscopy.
+Here, using a suite of retrieval tools, we analyse spectroscopic and
+photometric data of 25 hot Jupiters, obtained with the Hubble and Spitzer Space
+Telescopes via the eclipse technique. By applying the tools uniformly across
+the entire set of 25 planets, we extract robust trends in the thermal structure
+and chemical properties of hot Jupiters not obtained in past studies. With the
+recent launch of JWST and the upcoming missions Twinkle, and Ariel, population
+based studies of exoplanet atmospheres, such as the one presented here, will be
+a key approach to understanding planet characteristics, formation, and
+evolution in our galaxy.
+
+### Title: The Galactic 3D large-scale dust distribution via Gaussian process regression on spherical coordinates
+* Paper ID: 2204.11715v1
+* Paper URL: [http://arxiv.org/abs/2204.11715v1](http://arxiv.org/abs/2204.11715v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: Knowing the Galactic 3D dust distribution is relevant for understanding many
+processes in the interstellar medium and for correcting many astronomical
+observations for dust absorption and emission. Here, we aim for a 3D
+reconstruction of the Galactic dust distribution with an increase in the number
+of meaningful resolution elements by orders of magnitude with respect to
+previous reconstructions, while taking advantage of the dust's spatial
+correlations to inform the dust map. We use iterative grid refinement to define
+a log-normal process in spherical coordinates. This log-normal process assumes
+a fixed correlation structure, which was inferred in an earlier reconstruction
+of Galactic dust. Our map is informed through 111 Million data points,
+combining data of PANSTARRS, 2MASS, Gaia DR2 and ALLWISE. The log-normal
+process is discretized to 122 Billion degrees of freedom, a factor of 400 more
+than our previous map. We derive the most probable posterior map and an
+uncertainty estimate using natural gradient descent and the Fisher-Laplace
+approximation. The dust reconstruction covers a quarter of the volume of our
+Galaxy, with a maximum coordinate distance of $16\,\text{kpc}$, and meaningful
+information can be found up to at distances of $4\,$kpc, still improving upon
+our earlier map by a factor of 5 in maximal distance, of $900$ in volume, and
+of about eighteen in angular grid resolution. Unfortunately, the maximum
+posterior approach chosen to make the reconstruction computational affordable
+introduces artifacts and reduces the accuracy of our uncertainty estimate.
+Despite of the apparent limitations of the presented 3D dust map, a good part
+of the reconstructed structures are confirmed by independent maser
+observations. Thus, the map is a step towards reliable 3D Galactic cartography
+and already can serve for a number of tasks, if used with care.
+
+### Title: NIHAO XXVII: Crossing the green valley
+* Paper ID: 2204.11579v1
+* Paper URL: [http://arxiv.org/abs/2204.11579v1](http://arxiv.org/abs/2204.11579v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: The transition of high-mass galaxies from being blue and star forming to
+being red and dead is a crucial step in galaxy evolution, yet not fully
+understood. In this work, we use the NIHAO suite of galaxy simulations to
+investigate the relation between the transition time through the green valley
+and other galaxy properties. The typical green valley crossing time of our
+galaxies is approximately 400 Myr, somewhat shorter than observational
+estimates. The crossing of the green valley is triggered by the onset of AGN
+feedback and the subsequent shut down of star formation. Interestingly the time
+spent in the green valley is not related to any other galaxy properties, such
+as stellar age or metallicity, or the time at which the star formation
+quenching takes place. The crossing time is set by two main contributions: the
+ageing of the current stellar population and the residual star formation in the
+green valley. These effects are of comparable magnitude, while major and minor
+mergers have a negligible contribution. Most interestingly, we find the time
+that a galaxy spends to travel through the green valley is twice the
+$e$-folding time of the star formation quenching. This result is stable against
+galaxy properties and the exact numerical implementation of AGN feedback in the
+simulation. Assuming a typical crossing time of about one Gyr inferred from
+observations, our results imply that any mechanism or process aiming to quench
+star formation, must do it on a typical timescale of 500 Myr.
+
+### Title: Deep Reinforcement Learning for Orienteering Problems Based on Decomposition
+* Paper ID: 2204.11575v1
+* Paper URL: [http://arxiv.org/abs/2204.11575v1](http://arxiv.org/abs/2204.11575v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: This paper presents a new method for solving an orienteering problem (OP) by
+breaking it down into two parts: a knapsack problem (KP) and a traveling
+salesman problem (TSP). A KP solver is responsible for picking nodes, while a
+TSP solver is responsible for designing the proper path and assisting the KP
+solver in judging constraint violations. To address constraints, we propose a
+dual-population coevolutionary algorithm (DPCA) as the KP solver, which
+simultaneously maintains both feasible and infeasible populations. A dynamic
+pointer network (DYPN) is introduced as the TSP solver, which takes city
+locations as inputs and immediately outputs a permutation of nodes. The model,
+which is trained by reinforcement learning, can capture both the structural and
+dynamic patterns of the given problem. The model can generalize to other
+instances with different scales and distributions. Experimental results show
+that the proposed algorithm can outperform conventional approaches in terms of
+training, inference, and generalization ability.
+
+### Title: Goal-driven Self-Attentive Recurrent Networks for Trajectory Prediction
+* Paper ID: 2204.11561v1
+* Paper URL: [http://arxiv.org/abs/2204.11561v1](http://arxiv.org/abs/2204.11561v1)
+* Updated Date: 2022-04-25
+* Code URL: [https://github.com/luigifilippochiara/Goal-SAR](https://github.com/luigifilippochiara/Goal-SAR)
+* Summary: Human trajectory forecasting is a key component of autonomous vehicles,
+social-aware robots and advanced video-surveillance applications. This
+challenging task typically requires knowledge about past motion, the
+environment and likely destination areas. In this context, multi-modality is a
+fundamental aspect and its effective modeling can be beneficial to any
+architecture. Inferring accurate trajectories is nevertheless challenging, due
+to the inherently uncertain nature of the future. To overcome these
+difficulties, recent models use different inputs and propose to model human
+intentions using complex fusion mechanisms. In this respect, we propose a
+lightweight attention-based recurrent backbone that acts solely on past
+observed positions. Although this backbone already provides promising results,
+we demonstrate that its prediction accuracy can be improved considerably when
+combined with a scene-aware goal-estimation module. To this end, we employ a
+common goal module, based on a U-Net architecture, which additionally extracts
+semantic information to predict scene-compliant destinations. We conduct
+extensive experiments on publicly-available datasets (i.e. SDD, inD, ETH/UCY)
+and show that our approach performs on par with state-of-the-art techniques
+while reducing model complexity.
+
+### Title: Robust inference for non-destructive one-shot device testing under step-stress model with exponential lifetimes
+* Paper ID: 2204.11560v1
+* Paper URL: [http://arxiv.org/abs/2204.11560v1](http://arxiv.org/abs/2204.11560v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: One-shot devices analysis involves an extreme case of interval censoring,
+wherein one can only know whether the failure time is either before or after
+the test time. Some kind of one-shot devices do not get destroyed when tested,
+and so can continue within the experiment, providing extra information for
+inference, if they did not fail before an inspection time. In addition, their
+reliability can be rapidly estimated via accelerated life tests (ALTs) by
+running the tests at varying and higher stress levels than working conditions.
+In particular, step-stress tests allow the experimenter to increase the stress
+levels at pre-fixed times gradually during the life-testing experiment. The
+cumulative exposure model is commonly assumed for step-stress models, relating
+the lifetime distribution of units at one stress level to the lifetime
+distributions at preceding stress levels. In this paper,vwe develop robust
+estimators and Z-type test statistics based on the density power divergence
+(DPD) for testing linear null hypothesis for non-destructive one-shot devices
+under the step-stress ALTs with exponential lifetime distribution. We study
+asymptotic and robustness properties of the estimators and test statistics,
+yielding point estimation and confidence intervals for different lifetime
+characteristic such as reliability, distribution quantiles and mean lifetime of
+the devices. A simulation study is carried out to assess the performance of the
+methods of inference developed here and some real-life data sets are analyzed
+finally for illustrative purpose.
+
+### Title: ED2LM: Encoder-Decoder to Language Model for Faster Document Re-ranking Inference
+* Paper ID: 2204.11458v1
+* Paper URL: [http://arxiv.org/abs/2204.11458v1](http://arxiv.org/abs/2204.11458v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: State-of-the-art neural models typically encode document-query pairs using
+cross-attention for re-ranking. To this end, models generally utilize an
+encoder-only (like BERT) paradigm or an encoder-decoder (like T5) approach.
+These paradigms, however, are not without flaws, i.e., running the model on all
+query-document pairs at inference-time incurs a significant computational cost.
+This paper proposes a new training and inference paradigm for re-ranking. We
+propose to finetune a pretrained encoder-decoder model using in the form of
+document to query generation. Subsequently, we show that this encoder-decoder
+architecture can be decomposed into a decoder-only language model during
+inference. This results in significant inference time speedups since the
+decoder-only architecture only needs to learn to interpret static encoder
+embeddings during inference. Our experiments show that this new paradigm
+achieves results that are comparable to the more expensive cross-attention
+ranking approaches while being up to 6.8X faster. We believe this work paves
+the way for more efficient neural rankers that leverage large pretrained
+models.
+
+### Title: Fine-tuning Pruned Networks with Linear Over-parameterization
+* Paper ID: 2204.11444v1
+* Paper URL: [http://arxiv.org/abs/2204.11444v1](http://arxiv.org/abs/2204.11444v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: Structured pruning compresses neural networks by reducing channels (filters)
+for fast inference and low footprint at run-time. To restore accuracy after
+pruning, fine-tuning is usually applied to pruned networks. However, too few
+remaining parameters in pruned networks inevitably bring a great challenge to
+fine-tuning to restore accuracy. To address this challenge, we propose a novel
+method that first linearly over-parameterizes the compact layers in pruned
+networks to enlarge the number of fine-tuning parameters and then
+re-parameterizes them to the original layers after fine-tuning. Specifically,
+we equivalently expand the convolution/linear layer with several consecutive
+convolution/linear layers that do not alter the current output feature maps.
+Furthermore, we utilize similarity-preserving knowledge distillation that
+encourages the over-parameterized block to learn the immediate data-to-data
+similarities of the corresponding dense layer to maintain its feature learning
+ability. The proposed method is comprehensively evaluated on CIFAR-10 and
+ImageNet which significantly outperforms the vanilla fine-tuning strategy,
+especially for large pruning ratio.
+
+### Title: Graph Auto-Encoders for Network Completion
+* Paper ID: 2204.11852v1
+* Paper URL: [http://arxiv.org/abs/2204.11852v1](http://arxiv.org/abs/2204.11852v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: Completing a graph means inferring the missing nodes and edges from a
+partially observed network. Different methods have been proposed to solve this
+problem, but none of them employed the pattern similarity of parts of the
+graph. In this paper, we propose a model to use the learned pattern of
+connections from the observed part of the network based on the Graph
+Auto-Encoder technique and generalize these patterns to complete the whole
+graph. Our proposed model achieved competitive performance with less
+information needed. Empirical analysis of synthetic datasets and real-world
+datasets from different domains show that our model can complete the network
+with higher accuracy compared with baseline prediction models in most cases.
+Furthermore, we also studied the character of the model and found it is
+particularly suitable to complete a network that has more complex local
+connection patterns.
+
+### Title: ATLASGAL-selected massive clumps in the inner Galaxy. X. Observations of atomic carbon at 492 GHz
+* Paper ID: 2204.11414v1
+* Paper URL: [http://arxiv.org/abs/2204.11414v1](http://arxiv.org/abs/2204.11414v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: (Abridged) In this paper, we investigate the physical conditions of
+[CI]-traced gas in high-mass star-forming regions by analyzing APEX [CI] 492
+GHz single-pointing observations of the ATLASGAL Top100 sources along with
+other multi-wavelength data. Our 98 sources are clearly detected in [CI] 492
+GHz emission, and the observed integrated intensities and line widths tend to
+increase toward evolved stages of star formation. In addition to these "main"
+components that are associated with the Top100 sample, 41 emission and two
+absorption features are identified by their velocities toward 28 and two lines
+of sight respectively as "secondary" components. The secondary components have
+systematically smaller integrated intensities and line widths than the main
+components. We found that [CI] 492 GHz and 13CO(2-1) are well correlated with
+the 13CO(2-1)-to-[CI] 492 GHz integrated intensity ratio varying from 0.2 to
+5.3. In addition, we derived the H2-to-[CI] conversion factor, X(CI), by
+dividing 870 micron-based H2 column densities by the observed [CI] 492 GHz
+integrated intensities and found that X(CI) ranges from 2.3e20 to 1.3e22 with a
+median of 1.7e21. In contrast to the strong correlation with 13CO(2-1), [CI]
+492 GHz has a scattered relation with the 870 micron-traced molecular gas.
+Finally, we performed LTE and non-LTE analyses of the [CI] 492 GHz and 809 GHz
+data for a subset of the Top100 sample and inferred that [CI] emission likely
+originates from warm (kinetic temperature > 60 K), optically thin (opacity <
+0.5), and highly pressurized (thermal pressure ~ e5 to e8 K/cm3) regions.
+
