--- a/protect/2022-04-25.md
+++ b/protect/2022-04-25.md
@@ -134,3 +134,165 @@ present simulation framework and effective model, which can handle arbitrary
 local noise, will play a vital role in clarifying the physical parameters that
 future experimental QEC should target.
 
+### Title: Strategic Signaling for Utility Control in Audit Games
+* Paper ID: 2204.11950v1
+* Paper URL: [http://arxiv.org/abs/2204.11950v1](http://arxiv.org/abs/2204.11950v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: As an effective method to protect the daily access to sensitive data against
+malicious attacks, the audit mechanism has been widely deployed in various
+practical fields. In order to examine security vulnerabilities and prevent the
+leakage of sensitive data in a timely manner, the database logging system
+usually employs an online signaling scheme to issue an alert when suspicious
+access is detected. Defenders can audit alerts to reduce potential damage. This
+interaction process between a defender and an attacker can be modeled as an
+audit game. In previous studies, it was found that sending real-time signals in
+the audit game to warn visitors can improve the benefits of the defender.
+However, the previous approaches usually assume perfect information of the
+attacker, or simply concentrate on the utility of the defender. In this paper,
+we introduce a brand-new zero-determinant (ZD) strategy to study the sequential
+audit game with online signaling, which empowers the defender to unilaterally
+control the utility of visitors when accessing sensitive data. In addition, an
+optimization scheme based on the ZD strategy is designed to effectively
+maximize the utility difference between the defender and the attacker.
+Extensive simulation results show that our proposed scheme enhances the
+security management and control capabilities of the defender to better handle
+different access requests and safeguard the system security in a cost-efficient
+manner.
+
+### Title: A feasibility study proposal of the predictive model to enable the prediction of population susceptibility to COVID-19 by analysis of vaccine utilization for advising deployment of a booster dose
+* Paper ID: 2204.11747v1
+* Paper URL: [http://arxiv.org/abs/2204.11747v1](http://arxiv.org/abs/2204.11747v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: With the present highly infectious dominant SARS-CoV-2 strain of B1.1.529 or
+Omicron spreading around the globe, there is concern that the COVID-19 pandemic
+will not end soon and that it will be a race against time until a more
+contagious and virulent variant emerges. One of the most promising approaches
+for preventing virus propagation is to maintain continuous high vaccination
+efficacy among the population, thereby strengthening the population protective
+effect and preventing the majority of infection in the vaccinated population,
+as is known to occur with the Omicron variant frequently. Countries must
+structure vaccination programs in accordance with their populations'
+susceptibility to infection, optimizing vaccination efforts by delivering
+vaccines progressively enough to protect the majority of the population. We
+present a feasibility study proposal for maintaining optimal continuous
+vaccination by assessing the susceptible population, the decline of vaccine
+efficacy in the population, and advising booster dosage deployment to maintain
+the population's protective efficacy through the use of a predictive model.
+Numerous studies have been conducted in the direction of analyzing vaccine
+utilization; however, very little study has been conducted to substantiate the
+optimal deployment of booster dosage vaccination with the help of a predictive
+model based on machine learning algorithms.
+
+### Title: Optimal security hardening over a probabilistic attack graph: a case study of an industrial control system using the CySecTool tool
+* Paper ID: 2204.11707v1
+* Paper URL: [http://arxiv.org/abs/2204.11707v1](http://arxiv.org/abs/2204.11707v1)
+* Updated Date: 2022-04-25
+* Code URL: [https://github.com/przemub/cysectool](https://github.com/przemub/cysectool)
+* Summary: CySecTool is a tool that finds a cost-optimal security controls portfolio in
+a given budget for a probabilistic attack graph. A portfolio is a set of
+counter-measures, or controls, against vulnerabilities adopted for a computer
+system, while an attack graph is a type of a threat scenario model. In an
+attack graph, nodes are privilege states of the attacker, edges are
+vulnerabilities escalating privileges, and controls reduce the probabilities of
+some vulnerabilities being exploited. The tool builds on an optimisation
+algorithm published by Khouzani et al. (2019), enabling a user to quickly
+create, edit, and incrementally improve models, analyse results for given
+portfolios and display the best solutions for all possible budgets in the form
+of a Pareto frontier. A case study was performed utilising a system graph and
+suspected attack paths prepared by industrial security engineers based on an
+industrial source with which they work. The goal of the case study is to model
+a supervisory control and data acquisition (SCADA) industrial system which, due
+to having the potential to harm people, necessitates strong protection while
+not allowing the use of typical penetration tools like vulnerability scanners.
+Results are analysed to show how a cyber-security analyst would use CySecTool
+to store cyber-security intelligence and draw further conclusions.
+
+### Title: Cryptography Is Not Enough: Relay Attacks on Authenticated GNSS Signals
+* Paper ID: 2204.11641v1
+* Paper URL: [http://arxiv.org/abs/2204.11641v1](http://arxiv.org/abs/2204.11641v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: Civilian-GNSS is vulnerable to signal spoofing attacks, and countermeasures
+based on cryptographic authentication are being proposed to protect against
+these attacks. Both Galileo and GPS are currently testing broadcast
+authentication techniques based on the delayed key disclosure to validate the
+integrity of navigation messages. These authentication mechanisms have proven
+secure against record now and replay later attacks, as navigation messages
+become invalid after keys are released. This work analyzes the security
+guarantees of cryptographically protected GNSS signals and shows the
+possibility of spoofing a receiver to an arbitrary location without breaking
+any cryptographic operation. In contrast to prior work, we demonstrate the
+ability of an attacker to receive signals close to the victim receiver and
+generate spoofing signals for a different target location without modifying the
+navigation message contents. Our strategy exploits the essential common
+reception and transmission time method used to estimate pseudorange in GNSS
+receivers, thereby rendering any cryptographic authentication useless. We
+evaluate our attack on a commercial receiver (ublox M9N) and a software-defined
+GNSS receiver (GNSS-SDR) using a combination of open-source tools, commercial
+GNSS signal generators, and software-defined radio hardware platforms. Our
+results show that it is possible to spoof a victim receiver to locations around
+4000 km away from the true location without requiring any high-speed
+communication networks or modifying the message contents. Through this work, we
+further highlight the fundamental limitations in securing a broadcast
+signaling-based localization system even if all communications are
+cryptographically protected.
+
+### Title: Go Wide or Go Deep: Levering Watermarking Performance with Computational Cost for Specific Images
+* Paper ID: 2204.11513v1
+* Paper URL: [http://arxiv.org/abs/2204.11513v1](http://arxiv.org/abs/2204.11513v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: Digital watermarking has been widely studied for the protection of
+intellectual property. Traditional watermarking schemes often design in a
+"wider" rule, which applies one general embedding mechanism to all images. But
+this will limit the scheme into a robustness-invisibility trade-off, where the
+improvements of robustness can only be achieved by the increase of embedding
+intensity thus causing the visual quality decay. However, a new scenario comes
+out at this stage that many businesses wish to give high level protection to
+specific valuable images, which requires high robustness and high visual
+quality at the same time. Such scenario makes the watermarking schemes should
+be designed in a "deeper" way which makes the embedding mechanism customized to
+specific images. To achieve so, we break the robustness-invisibility trade-off
+by introducing computation cost in, and propose a novel auto-decoder-like
+image-specified watermarking framework (ISMark). Based on ISMark, the strong
+robustness and high visual quality for specific images can be both achieved. In
+detail, we apply an optimization procedure (OPT) to replace the traditional
+embedding mechanism. Unlike existing schemes that embed watermarks using a
+learned encoder, OPT regards the cover image as the optimizable parameters to
+minimize the extraction error of the decoder, thus the features of each
+specified image can be effectively exploited to achieve superior performance.
+Extensive experiments indicate that ISMark outperforms the state-of-the-art
+methods by a large margin, which improves the average bit error rate by 4.64%
+(from 4.86% to 0.22%) and PSNR by 2.20dB (from 32.50dB to 34.70dB).
+
+### Title: Simulation and performance analysis of quantum error correction with a rotated surface code under a realistic noise model
+* Paper ID: 2204.11404v1
+* Paper URL: [http://arxiv.org/abs/2204.11404v1](http://arxiv.org/abs/2204.11404v1)
+* Updated Date: 2022-04-25
+* Code URL: null
+* Summary: The demonstration of quantum error correction (QEC) is one of the most
+important milestones in the realization of fully-fledged quantum computers.
+Toward this, QEC experiments using the surface codes have recently been
+actively conducted. However, it has not yet been realized to protect logical
+quantum information beyond the physical coherence time. In this work, we
+performed a full simulation of QEC for the rotated surface codes with a code
+distance 5, which employs 49 qubits and is within reach of the current
+state-of-the-art quantum computers. In particular, we evaluate the logical
+error probability in a realistic noise model that incorporates not only
+stochastic Pauli errors but also coherent errors due to a systematic control
+error or unintended interactions. While a straightforward simulation of 49
+qubits is not tractable within a reasonable computational time, we reduced the
+number of qubits required to 26 qubits by delaying the syndrome measurement in
+simulation. This and a fast quantum computer simulator, Qulacs, implemented on
+GPU allows us to simulate full QEC with an arbitrary local noise within
+reasonable simulation time. Based on the numerical results, we also construct
+and verify an effective model to incorporate the effect of the coherent error
+into a stochastic noise model. This allows us to understand what the effect
+coherent error has on the logical error probability on a large scale without
+full simulation based on the detailed full simulation of a small scale. The
+present simulation framework and effective model, which can handle arbitrary
+local noise, will play a vital role in clarifying the physical parameters that
+future experimental QEC should target.
+
